# skadi-documents

./: .editorconfig  .gitignore  Cargo.toml  skadi.toml
projects/skadi-backend/: Cargo.toml  db.sql
projects/skadi-backend/src/: lib.rs  main.rs
projects/skadi-backend/src/api_document/: mod.rs
projects/skadi-backend/src/api_packages/: mod.rs
projects/skadi-backend/src/api_statistics/: mod.rs
projects/skadi-backend/src/api_sts/: mod.rs
projects/skadi-backend/src/configs/: mod.rs
projects/skadi-backend/src/errors/: convert.rs  display.rs  mod.rs
projects/skadi-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
projects/skadi-frontend/src/: App.vue  main.ts  style.css
projects/skadi-frontend/src/api/: api-document.ts  api-home.ts  api-package.ts  request.ts
projects/skadi-frontend/src/api/models/: api-key-location.ts  class-info.ts  components.ts  contact.ts  cookie-style.ts  document-info-one-of.ts  document-info-one-of1.ts  document-info-one-of2.ts  document-info.ts  document-query-by-path.ts  encoding.ts  example-api.ts  example.ts  external-documentation.ts  header-one-of.ts  header-one-of1.ts  header-style.ts  header.ts  home-statistics.ts  index.ts  info.ts  instance-type.ts  license.ts  link-one-of.ts  link-one-of1.ts  link.ts  media-type.ts  module-info.ts  module-item.ts  module-type.ts  oauth2-flows-one-of-implicit.ts  oauth2-flows-one-of.ts  oauth2-flows-one-of1-password.ts  oauth2-flows-one-of1.ts  oauth2-flows-one-of2.ts  oauth2-flows-one-of3-authorization-code.ts  oauth2-flows-one-of3.ts  oauth2-flows.ts  open-api.ts  operation.ts  (+40 more)
projects/skadi-frontend/src/components/: ExampleComponent.vue  HelloWorld.vue  HomeNavigation.vue  InstallCommand.vue  PackageContent.vue  PackageDependencies.vue  PackageDependents.vue  PackageDocs.vue  PackageHeader.vue  PackageList.vue  PackageManager.vue  PackageOverview.vue  PackageSource.vue  PackageVersionItem.vue  PackageVersions.vue  SearchBox.vue  SideNavigation.vue  TabNavigation.vue  TopNavigation.vue
projects/skadi-frontend/src/components/document/: ClassView.vue  DocumentSearch.vue  DocumentSidebar.vue  DocumentTopbar.vue  ModuleView.vue  TraitView.vue  index.ts
projects/skadi-frontend/src/components/package/: PackageContent.vue  PackageHeader.vue  PackageOverview.vue  PackageRecommend.vue  PackageSidebar.vue  PackageSource.vue  index.ts
projects/skadi-frontend/src/composables/: useMarkdown.ts
projects/skadi-frontend/src/i18n/: index.ts
projects/skadi-frontend/src/locales/: en-us.ftl  en.ftl  index.ts  zh-hans.ftl
projects/skadi-frontend/src/router/: index.ts
projects/skadi-frontend/src/style/: _variable.scss  main.scss
projects/skadi-frontend/src/view/: DocumentPage.vue  HomePage.vue  LibraryPage.vue  OrganizationPage.vue  PackagePage.vue
