[package]
name = "skadi"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
axum = { version = "0.8.1", features = [] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
aide = { version = "0.14.2", features = ["axum", "axum-json"] }
schemars = { version = "0.8.22", features = ["chrono", "uuid1", "indexmap2"] }
chrono = { version = "0.4.40", features = ["serde"] }
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["v7", "serde"] }
indexmap = { version = "2.8.0", features = ["serde"]}

[dependencies.sqlx]
version = "0.8.3"
features = ["runtime-tokio-rustls", "sqlx-postgres", "postgres", "chrono"]
default-features = false


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
